--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -41,7 +41,7 @@ Para complementar a sua própria percepção bem como os objetivos do livro, o p
 
 _José Alcigério Batista (Léo Batista) é natural de São Miguel/RN, nasceu no dia 13 de setembro de 1955. Filho de seu Alcides Batista e Josefa Josélia Batista, tem dez irmãos: 5 homens e 5 mulheres. Casou com Francisca Leite de Oliveira Batista, Dona Chica, [...] Neste laço, gerou dois filhos varões. Morou em São Paulo, Brasília, Natal, Campos do Jordão, Fortaleza, Mossoró, se formou no ano de 1984 em Letras Inglês pela antiga FURN^[Hoje é chamada UERN, Universidade Estadual do Rio Grande do Norte.] e se pós graduou em Linguagem pela UNP. Em São Paulo, no ano de 1978, foi gerente de uma loja de tecidos no Brás, em 1977, viveu ganhando alguns trocados como cuidador de um deficiente visual. É funcionário público do estado, professor de língua inglesa. Recebeu o título de cidadão Pau-ferrense em 09 de dezembro de 2011._
 
-_Afora tudo isso ou consoante a, eu falo de um espírito de luz chamado Léo Batista, o Bardo, o Xamã Aventureiro, o Falcão Ligeiro. Léo é o poeta das melodias, é o dono da curva das palavras, é o irmão dos sons. Pousou em nossas terras, se firmou, construiu seu clã e nos deu de presente uma obra sobre-humana e surreal. Quem nas vielas de Pau dos Ferros nunca ouviu falar no [SERTÃO DE METAL](https://bendeivide.github.io/arts/sertaodemetal/), uma visão futurista, composta em meados dos anos 70, que retrata justamente a realidade que vivenciamos hoje? Os tempos do sabiá de metal mal polido... Nos anos 80 e 90, depois dos folguedos da sorveteria de Sales Correia, Léo e Círio (seu companheiro inseparável) derramaram suas liras na Praça do Pavilhão e construíam seus nomes na cultura de nossa cidade. Gravaram juntos em 1996, o disco que leva o nome dessa composição mais famosa ''o sertão de metal'', LP que roda nas radiolas do mundo todo e até hoje faz sucesso por todos os recantos do planeta._
+_Afora tudo isso ou consoante a, eu falo de um espírito de luz chamado Léo Batista, o Bardo, o Xamã Aventureiro, o Falcão Ligeiro. Léo é o poeta das melodias, é o dono da curva das palavras, é o irmão dos sons. Pousou em nossas terras, se firmou, construiu seu clã e nos deu de presente uma obra sobre-humana e surreal. Quem nas vielas de Pau dos Ferros nunca ouviu falar no [SERTÃO DE METAL](https://bendeivide.github.io/arts/sertaodemetal/), uma visão futurista, composta em meados dos anos 70, que retrata justamente a realidade que vivenciamos hoje? Os tempos do sabiá de metal mal polido... Nos anos 80 e 90, depois dos folguedos da sorveteria de Sales Correia, Léo e Círio (seu companheiro inseparável) derramaram suas liras na Praça do Pavilhão e construíam seus nomes na cultura de nossa cidade. Gravaram juntos em 1996, o disco que leva o nome dessa composição mais famosa “o sertão de metal”, LP que roda nas radiolas do mundo todo e até hoje faz sucesso por todos os recantos do planeta._
 
 _Léo é místico, doce, humano e sobretudo, alma, um homem de alma, um humano interior, de fé. Além do Sertão de Metal, oração de nossas terras, Léo possui uma obra imensa e ainda inédita, privilegiados aqueles que chegaram a ouvir, numa esquina, num encontro etílico, o verbo em melodia de nosso Falcão Ligeiro._
 
@@ -50,7 +50,7 @@ Escrava de Ouro, Musa Linda, Cidade, Margaridas da Favela, Afirmações de um Pe
 
 _A obra do Xamã Aventureiro não tem idade, é telúrica, é espiritual, é naturalista, um tratado de conduta humana, um templo sagrado. O que dizer da mística ATMA-LUZ, Da melodiosa e dolente VELHICE PRECOCE? Do bucólico POR FAVOR, SEU CAPITÃO? [...] Eita, velho bardo, nós somos felizardos por sermos devotos de sua carga poética. E seu legado ecológico nas canções? Que as energias façam com que isso tudo ganhe forma de gás e esteja ao alcance da respiração de todos._
 
-_Você seria mil livros, mil postagens, por enquanto, ficaremos com essa amostra de sua passagem poética permanente, de seus trabalhos intensos. Avante mestre, chapéu na cuca, barba anarquista e revolucionária e verso na voz... ''Há de existir um lugar onde o tempo pára para ver o jegue relinchar, onde o mundo é de todos nós...''_
+_Você seria mil livros, mil postagens, por enquanto, ficaremos com essa amostra de sua passagem poética permanente, de seus trabalhos intensos. Avante mestre, chapéu na cuca, barba anarquista e revolucionária e verso na voz... “Há de existir um lugar onde o tempo pára para ver o jegue relinchar, onde o mundo é de todos nós...”_
 
 ## Estrutura dos próximos capítulos
 
