--- a/index.Rmd
+++ b/index.Rmd
@@ -2,15 +2,16 @@
 title: "Pelos caminhos de Ciriégola"
 author: "Ben Dêivide"
 date: "`r Sys.Date()`"
-#lang: pt
-csl: abnt.csl
+output:
+  html_document:
+    df_print: paged
 site: bookdown::bookdown_site
-bibliography:
-  - biblio.bib
+bibliography: biblio.bib
 biblio-style: apalike
 link-citations: yes
-url: 'https://bendeivide.github.io/book-ciriegola/'
+url: https://bendeivide.github.io/book-ciriegola/
 github-repo: bendeivide/book-ciriegola
+csl: abnt.csl
 ---
 
 <!-- <a href="https://bendeivide.github.io/books/ciriegola/"><img src="capa.png" align="right" width="250" height="366" class="cover" alt="Compre pela internet" /> -->
